fix: adjust color of code block so there is contrast in light mode.
The theme's code colors do not apply to code block at the moment. Will work on in the future.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -91,3 +91,12 @@
     width: calc(100% / 3);
   }
 }
+
+.content pre {
+  color: #ff7f7f;
+  background-color: #393D47 !important;
+}
+.content pre code {
+  color: #ff7f7f;
+  background-color: #393D47;
+}
